--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.16.8",
     "axios": "^0.24.0",
+    "copy-webpack-plugin": "^10.2.0",
     "react-router-dom": "^6.2.1"
   }
 }
